# Deck

./: .gitignore  .swiftlint.yml  CHANGELOG.md  CHANGELOG_CN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ExportOptions.plist  LICENSE  README.md  README_CN.md  SECURITY-NOTICE.md  SECURITY.md  llms-full.txt  llms.txt  working.diff
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  bug_report_cn.yml  bug_report_en.yml  config.yml  feature_request.md  feature_request.yml  feature_request_cn.yml  feature_request_en.yml
.github/actions/setup-swiftlint/: action.yml
.github/workflows/: ci.yml  merge-main-into-dev.yml  notify-homebrew.yml  pr-scope-guard.yml  release-changelog-bot.yml  release.yml  rust-ci.yml  upload-release-to-spaces.yml
Assets.xcassets/black_hole_texture.imageset/: Contents.json
Deck/Models/: ClipboardItem.swift  DeckTag.swift
Deck/Resources/: AppTypePreferences.json
Deck/Services/: AppleStreamingMetadataResolver.swift  DataExportService.swift  DeckSQLManager.swift  LANFileArchiver.swift  MaccyMigrationAdapter.swift  OrbitBridgeAuth.swift  OrbitCLIBridgeService.swift  ScriptPluginService.swift  SecurityService.swift  TextTransformer.swift  WebToolService.swift
Deck/Utilities/: AppLogger.swift  Constants.swift  EventDispatcher.swift  Extensions.swift
Deck/Views/AIChat/: AIChatBreathingDot.swift  AIStreamingTextAccumulator.swift
Deck/Views/Components/: ClipItemCardView.swift  HistoryListView.swift
OrbitBridgeXPC/: Info.plist  OrbitBridgeXPC.swift
deckclip/: Cargo.toml  LICENSE  README.md
deckclip/deckclip/: Cargo.toml
deckclip/deckclip-core/: Cargo.toml
deckclip/deckclip-core/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  transport.rs
deckclip/deckclip-core/tests/: canonical_fixture_alignment.rs
deckclip/deckclip-protocol/: Cargo.toml
deckclip/deckclip-protocol/src/: codec.rs  message.rs
deckclip/deckclip-protocol/tests/fixtures/: canonical_json_vectors.json
deckclip/deckclip/src/: cli.rs  completion_sound.rs  logo.ans  main.rs  output.rs
deckclip/deckclip/src/commands/: ai.rs  chat.rs  login.rs  mcp.rs  mod.rs  version.rs
deckclip/deckclip/src/commands/chat/: app_impl.rs  approval.rs  render.rs  tests.rs
deckclip/deckclip/src/i18n/: locales.rs
deckclip/deckclip/tests/: version_output.rs
deckclip/scripts/: ascii-art.html  build-release.sh  extract-ascii-art.py
scripts/: add_copyright.py  code-quality.sh  sync_release_changelog.py
