[workspace]
members = ["deckclip", "deckclip-core", "deckclip-protocol"]
resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
strip = "debuginfo"

[profile.test]
debug = 0
strip = "debuginfo"
