[package]
name = "deckclip-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
deckclip-protocol = { path = "../deckclip-protocol" }
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "fs", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
rand = "0.9.3"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
dirs = "6"
