[package]
name = "deckclip"
version.workspace = true
edition.workspace = true

[[bin]]
name = "deckclip"
path = "src/main.rs"

[dependencies]
deckclip-core = { path = "../deckclip-core" }
deckclip-protocol = { path = "../deckclip-protocol" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
owo-colors = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
crossterm = "0.28"
textwrap = "0.16"
ratatui = "0.29"
unicode-width = "0.2"
