[package]
name = "deckclip"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "deckclip"
path = "src/main.rs"

[dependencies]
deckclip-core = { path = "../deckclip-core" }
deckclip-protocol = { path = "../deckclip-protocol" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
owo-colors = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
crossterm = "0.28"
textwrap = "0.16"
ratatui-core = "0.1"
ratatui-crossterm = { version = "0.1", default-features = false, features = ["crossterm_0_28"] }
ratatui-widgets = { version = "0.3", default-features = false }
unicode-width = "0.2"
rmcp = { version = "1.4", features = ["server", "macros", "transport-io"] }
schemars = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"
